fix: layout shift when navigating

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,7 +33,7 @@
 }
 
 /* Force vertical scrollbar to be always visible to avoid layout shift while loading the content */
-html {
+body {
   overflow-y: scroll;
 }
 
